[package]
name = "noxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "noxy"
path = "src/lib.rs"

[[bin]]
name = "noxy"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["x509-parser"] }
webpki-roots = "0.26"

[dev-dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio = { version = "1", features = ["full"] }
