[package]
name = "noxy"
version = "0.0.1"
edition = "2024"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
description = "TLS man-in-the-middle proxy with a pluggable middleware pipeline"
license = "MIT"
repository = "https://github.com/reu/noxy"
keywords = ["proxy", "tls", "mitm", "middleware", "https"]
categories = ["network-programming"]

[lib]
name = "noxy"
path = "src/lib.rs"

[[bin]]
name = "noxy"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"], optional = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }
rustls = "0.23"
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["x509-parser"] }
webpki-roots = "0.26"

[dev-dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio = { version = "1", features = ["full"] }
