[package]
name = "noxy"
version = "0.0.4"
edition = "2024"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
description = "HTTP forward and reverse proxy with a pluggable tower middleware pipeline"
license = "MIT"
repository = "https://github.com/reu/noxy"
keywords = ["proxy", "tls", "mitm", "middleware", "reverse-proxy"]
categories = ["network-programming"]

[lib]
name = "noxy"
path = "src/lib.rs"

[[bin]]
name = "noxy"
path = "src/main.rs"
required-features = ["cli"]

[features]
config = ["serde", "toml"]
cli = ["clap", "config", "tracing-subscriber"]
scripting = ["deno_core", "deno_ast", "deno_error", "serde"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"], optional = true }
deno_core = { version = "0.385", optional = true }
deno_ast = { version = "0.53", features = ["transpiling"], optional = true }
deno_error = { version = "0.7", optional = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "service", "server-auto", "client-legacy", "http1", "http2"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd", "deflate"] }
globset = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
rustls = "0.23"
rustls-pemfile = "2"
rand = "0.9"
rcgen = { version = "0.13", features = ["x509-parser"] }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
base64 = "0.22"
webpki-roots = "0.26"
lru = "0.16.3"
matchit = "0.8"
regex = "1"

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
criterion = { version = "0.5", features = ["async_tokio"] }
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"

[[bench]]
name = "proxy"
harness = false
